<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">IterApp</string>
    <string name="menu_add_event">AddEvent</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_filter">Filter</string>
    <string name="username_label">Username:</string>
    <string name="password_label">Password:</string>
    <string name="email_label">Email:</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="email_hint">Enter email</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="login_label">Login</string>
    <string name="title_login_activity">Sign Up or Login</string>
    <string name="title_map_demo_activity">MapDemoActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="event_title_placeholder">Event Title</string>
    <string name="title_activity_create_event">CreateEventActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="end_event">End Event</string>

    <string-array name="select_event">
        <item>Select Event Type</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Pub Crawl</item>
    </string-array>

    <string name="event_name_hint">Enter Event Name</string>
    <string name="event_description">Enter Short Description</string>
    <string name="create_new_event">Create New Event</string>
    <string name="title_activity_detailed_event">DetailedEventActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="logged_in_as_label">Logged in as:</string>
    <string name="logout_label">Logout</string>
    <string name="title_activity_filter">Filters</string>
    <string name="event_type_label">Event Type:</string>
    <string name="save_label">Save</string>
    
    <string name="pref_title_stick_container">Stick layer to</string>
    <string name="pref_title_show_shadow">Show shadow</string>
    <string name="pref_title_show_offset">Closed offset</string>
    <string name="open_button_container">Open</string>
    <string name="close_button_container">Close</string>
    
    <string name="swipe_label">Swipe!</string>
    <string name="swipe_left_label">Swipe left!</string>
    <string name="swipe_right_label">Swipe right!</string>
    <string name="swipe_up_label">Swipe up!</string>
    <string name="swipe_down_label">Swipe down!</string>

    <string name="label_right">Right</string>
    <string name="label_left">Left</string>
    <string name="label_middle">Middle</string>
    <string name="label_top">Top</string>
    <string name="label_bottom">Bottom</string>

    <string name="not_applicable">n/a</string>
    
    <string-array name="pref_list_titles">
        <item>@string/label_right</item>
        <item>@string/label_middle</item>
        <item>@string/label_left</item>
        <item>@string/label_top</item>
        <item>@string/label_bottom</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>right</item>
        <item>middle</item>
        <item>left</item>
        <item>top</item>
        <item>bottom</item>
    </string-array>

    <string name="pref_go">Go!</string>

</resources>